# darcs-patch

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/: adapter.h  darcs_commute.h  darcs_patch.h  darcs_types.h
src/: darcs.cpp  darcs1.cpp  darcs_exe.cpp  executable.cpp
testBuilder/: CMakeLists.txt
tests/: CMakeLists.txt  DarcsPatch_Tests.cpp
